--- a/CandyAppReview.HW9_V2/Base.lproj/Main.storyboard
+++ b/CandyAppReview.HW9_V2/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Chocolate" image="heart.fill" catalog="system" id="0Gd-pU-28S"/>
                     <connections>
-                        <outlet property="tableView" destination="TMV-V3-Adr" id="Mh3-h5-d53"/>
+                        <outlet property="tableView" destination="TMV-V3-Adr" id="6Ng-gA-jMo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="70f-cM-kDw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -117,10 +117,10 @@
             </objects>
             <point key="canvasLocation" x="1234.7826086956522" y="1105.5803571428571"/>
         </scene>
-        <!--Hard Candies-->
+        <!--Sugar Candies-->
         <scene sceneID="bul-K3-qCd">
             <objects>
-                <viewController id="hxr-iw-Y5C" sceneMemberID="viewController">
+                <viewController id="hxr-iw-Y5C" customClass="fourthViewController" customModule="CandyAppReview_HW9_V2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3VS-fH-dd1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -133,27 +133,35 @@
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="gdC-Im-fRL">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gdC-Im-fRL" id="Ygs-GB-B67">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gdC-Im-fRL" id="Ygs-GB-B67" customClass="cell">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="hxr-iw-Y5C" id="xPs-c7-XHa"/>
+                                    <outlet property="delegate" destination="hxr-iw-Y5C" id="SZw-nr-0Ac"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Gp7-g2-TZ8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Hard Candies" image="heart.fill" catalog="system" id="Lh7-y8-gqP"/>
+                    <tabBarItem key="tabBarItem" title="Sugar Candies" image="heart.fill" catalog="system" id="Lh7-y8-gqP"/>
+                    <connections>
+                        <outlet property="fourthTabTableView" destination="hpG-Xm-G8V" id="9Oq-SX-rbP"/>
+                        <outlet property="fourthTableView" destination="hpG-Xm-G8V" id="H4w-Ye-4bd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BLb-aK-osJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="315.94202898550725" y="1769.8660714285713"/>
         </scene>
-        <!--View Controller-->
+        <!--Fourth Detail View Controller-->
         <scene sceneID="RQf-sw-IXw">
             <objects>
-                <viewController id="uTf-jY-Y8B" sceneMemberID="viewController">
+                <viewController id="uTf-jY-Y8B" customClass="fourthDetailViewController" customModule="CandyAppReview_HW9_V2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RNL-rB-daK">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -162,10 +170,21 @@
                                 <rect key="frame" x="48" y="270" width="321" height="188"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RSX-WO-uYf">
+                                <rect key="frame" x="48" y="538" width="321" height="110"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7ju-Uv-F4o"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="additionalFourthTabLabel" destination="RSX-WO-uYf" id="JVB-Wm-Goi"/>
+                        <outlet property="fourthTabImageView" destination="q33-Jv-qoo" id="E1i-7y-Bdh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sRs-70-ORf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -222,26 +241,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0jA-iL-d43">
-                                <rect key="frame" x="0.0" y="84" width="414" height="699"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="IBU-sH-QWm">
+                                <rect key="frame" x="0.0" y="127" width="414" height="662"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="Tbr-ol-CiK" detailTextLabel="j8w-Ev-gIs" style="IBUITableViewCellStyleSubtitle" id="s2g-PT-LPL" customClass="cell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="eSv-pF-bv8" detailTextLabel="TKa-NF-dVr" style="IBUITableViewCellStyleSubtitle" id="tRb-JM-q5b" customClass="cell">
                                         <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="s2g-PT-LPL" id="Hgp-V3-LoG">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tRb-JM-q5b" id="3O6-iT-OEd" customClass="cell">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Tbr-ol-CiK">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="eSv-pF-bv8">
                                                     <rect key="frame" x="20" y="6" width="25" height="14.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="j8w-Ev-gIs">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TKa-NF-dVr">
                                                     <rect key="frame" x="20" y="22.5" width="40.5" height="13.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
@@ -251,13 +270,13 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="hY3-tW-mty" kind="show" identifier="mySegue" id="dbA-xi-ej8"/>
+                                            <segue destination="hY3-tW-mty" kind="show" identifier="mySegue" id="aV4-0W-5VC"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="7xj-te-B3V" id="aQx-Xb-19P"/>
-                                    <outlet property="delegate" destination="7xj-te-B3V" id="Q3U-W6-ubU"/>
+                                    <outlet property="dataSource" destination="7xj-te-B3V" id="bpr-C7-ZLT"/>
+                                    <outlet property="delegate" destination="7xj-te-B3V" id="JS4-8z-9tZ"/>
                                 </connections>
                             </tableView>
                         </subviews>
@@ -266,7 +285,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Japanese Snacks" image="heart" catalog="system" id="zWy-fe-kC8"/>
                     <connections>
-                        <outlet property="secondTabTableView" destination="0jA-iL-d43" id="3JX-5J-Cad"/>
+                        <outlet property="thirdTableView" destination="IBU-sH-QWm" id="sp1-RB-oPj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CRK-ft-ybr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -302,7 +321,6 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                 <connections>
-                                    <action selector="learnMoreButtonLabel:" destination="AuV-Pc-Rex" eventType="touchUpInside" id="j88-Vb-CAK"/>
                                     <segue destination="deS-iV-3yY" kind="show" id="eSR-RW-Lzb"/>
                                 </connections>
                             </button>
@@ -331,21 +349,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6be-8I-OzH">
-                                <rect key="frame" x="52" y="584" width="316" height="59"/>
+                                <rect key="frame" x="52" y="462" width="316" height="109"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TrA-Wb-pno">
-                                <rect key="frame" x="52" y="369" width="316" height="207"/>
+                                <rect key="frame" x="100" y="247" width="237" height="207"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="Dvb-iW-HNV">
-                                <rect key="frame" x="52" y="665" width="316" height="129"/>
+                                <rect key="frame" x="52" y="579" width="316" height="129"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -356,9 +374,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="ccq-YV-TFH"/>
                     <connections>
-                        <outlet property="crunchImageView" destination="TrA-Wb-pno" id="AFw-ac-aBw"/>
-                        <outlet property="crunchLabel" destination="6be-8I-OzH" id="TTv-34-38Z"/>
-                        <outlet property="crunchTextView" destination="Dvb-iW-HNV" id="FiW-ut-wJk"/>
+                        <outlet property="featuredSnackImageView" destination="TrA-Wb-pno" id="4H4-yw-m2i"/>
+                        <outlet property="featuredSnackLabel" destination="6be-8I-OzH" id="tIj-7C-fTn"/>
+                        <outlet property="featuredSnackTextView" destination="Dvb-iW-HNV" id="6dh-A7-rmd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3mT-wA-GFY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
